improved on the overflow issues via the timeLine and the scrollToTop component

--- a/components/CareerMilestones/styles.module.css
+++ b/components/CareerMilestones/styles.module.css
@@ -1,5 +1,5 @@
 .careerMilestones {
-    @apply py-20 relative overflow-hidden cursor-default;
+    @apply py-10 relative overflow-hidden cursor-default;
 }
 
 
